Update tests and conformance script. (#28)